--- a/workplace/littlelemon/restaurant/templates/menu.html
+++ b/workplace/littlelemon/restaurant/templates/menu.html
@@ -6,7 +6,7 @@
 <div class="column">
    {% for item in menu%}
    <p>
-      {{ item.name }}
+      <a href="{% url 'menu_item' item.id %}">{{ item.name }}</a>
       <span class="menu-price">
          ${{ item.price }}.00
       </span>
