[IMP] Add footer.

--- a/workplace/littlelemon/restaurant/templates/base.html
+++ b/workplace/littlelemon/restaurant/templates/base.html
@@ -39,10 +39,10 @@
   <body>
     <!--Header content-->
     {% include 'partials/_header.html' %}
-
+    
     <main>{% block content %} {% endblock %}</main>
-
+    
     <!--Footer content-->
-    <!-- Replace this comment with your code  -->
+    {% include 'partials/_footer.html' %}
   </body>
 </html>
