--- a/workplace/littlelemon/restaurant/templates/menu_item.html
+++ b/workplace/littlelemon/restaurant/templates/menu_item.html
@@ -15,10 +15,10 @@
                     {{ menu_item.name }}
                 </h2>
                 <p>
-                    ${{ menu_item.price }}.00
+                    {{ menu_item.description }}
                 </p>
                 <p>
-                    {{ menu_item.description }}
+                    Price: ${{ menu_item.price }}.00
                 </p>
             </div>
             <div class="column">
